--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/nordbergr"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://twitter.com/robs_hindsight"><i class="fab fa-twitter"></i></a>
-			<a target="_blank" href="https://stackoverflow.com/story/5526413"><i class="fab fa-stack-overflow"></i></a>
+			<a target="_blank" href="https://stackoverflow.com/users/story/5526413"><i class="fab fa-stack-overflow"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/rob-nordberg-0730b834"><i class="fab fa-linkedin"></i></a>
         </div>
 	</main>
